# vakkenranking

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-linux.sh
src/: cli.hpp  complete_parser.hpp  csv_parser.cpp  csv_parser.hpp  evaluation.hpp  grade.hpp  main.cpp  mapping.hpp  printer.hpp  summary_parser.hpp
